Modificaciones Socket Desafío

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -28,4 +28,4 @@
 </div>
 
 <script src="socket.io/socket.io.js"></script>
-<script src="js/viewRouter.js"></script>
+<script src="../public/js/viewRouter.js"></script>
